# distributedhardware_distributed_audio

./: OAT.xml  README.md  README_zh.md  bundle.json  distributedaudio.gni  hisysevent.yaml
audiohandler/: BUILD.gn
audiohandler/include/: daudio_handler.h
audiohandler/src/: daudio_handler.cpp
audiohandler/test/unittest/: BUILD.gn
audiohandler/test/unittest/include/: daudio_handler_test.h
audiohandler/test/unittest/src/: daudio_handler_test.cpp
audiohandler/unittest/: BUILD.gn
audiohandler/unittest/include/: daudio_handler_test.h
audiohandler/unittest/src/: daudio_handler_test.cpp
common/: BUILD.gn
hdf_service/distributed_audio/: BUILD.gn  bundle.json
hdf_service/distributed_audio/audio_client/: BUILD.gn
hdf_service/distributed_audio/audio_client/include/: daudio_adapter_internal.h  daudio_attribute_internal.h  daudio_capture_internal.h  daudio_control_internal.h  daudio_param_callback_internal.h  daudio_render_callback_internal.h  daudio_render_internal.h  daudio_scene_internal.h  daudio_volume_internal.h  distributed_audio_client.h
hdf_service/distributed_audio/audio_client/src/: daudio_adapter_internal.cpp  daudio_capture_internal.cpp  daudio_param_callback_internal.cpp  daudio_render_callback_internal.cpp  daudio_render_internal.cpp  distributed_audio_client.cpp
hdf_service/distributed_audio/audio_client/test/unittest/: BUILD.gn  audio_adapter_test.cpp  audio_manager_test.cpp
hdf_service/distributed_audio/hdi_service/audio/v1_0/: BUILD.gn
hdf_service/distributed_audio/hdi_service/audio_ext/v1_0/: BUILD.gn
hdf_service/distributed_audio/hdi_service/common/: BUILD.gn
hdf_service/distributed_audio/hdi_service/common/include/: daudio_constants.h  daudio_errcode.h  daudio_events.h
hdf_service/distributed_audio/interface/audio/v1_0/: i_audio_adapter.h  i_audio_attribute.h  types.h
hdf_service/distributed_audio/interface/audio_ext/v1_0/: i_daudio_hdf_callback.h  i_daudio_manager.h  types.h
hdf_service/distributed_audio/mfc_test/: BUILD.gn  distributedaudiotest.cpp  distributedaudiotest.h
interfaces/inner_kits/native_cpp/audio_sink/: BUILD.gn
interfaces/inner_kits/native_cpp/audio_sink/include/: daudio_sink_handler.h  daudio_sink_load_callback.h  daudio_sink_proxy.h  idaudio_sink.h
interfaces/inner_kits/native_cpp/audio_sink/src/: daudio_sink_handler.cpp  daudio_sink_load_callback.cpp  daudio_sink_proxy.cpp
interfaces/inner_kits/native_cpp/test/fuzztest/: BUILD.gn
services/audioclient/micclient/: BUILD.gn
services/audioclient/micclient/include/: dmic_client.h
services/audioclient/micclient/src/: dmic_client.cpp
services/audioclient/micclient/test/unittest/: BUILD.gn
services/audioclient/test/unittest/micclient/: BUILD.gn
services/audioclient/test/unittest/spkclient/: BUILD.gn
services/audiocontrol/controlsink/: BUILD.gn
services/audiocontrol/controlsink/include/: daudio_sink_dev_ctrl_manager.h
services/audiocontrol/controlsink/src/: daudio_sink_dev_ctrl_manager.cpp
services/audiocontrol/controlsource/: BUILD.gn
services/audiocontrol/controlsource/include/: daudio_source_dev_ctrl_manager.h
services/audiocontrol/controlsource/src/: daudio_source_dev_ctrl_manager.cpp
services/audiocontrol/test/unittest/controlsource/: BUILD.gn
services/audiohdiproxy/: BUILD.gn
services/audiohdiproxy/include/: daudio_hdf_operate.h  daudio_hdi_handler.h  daudio_manager_callback.h  idaudio_hdi_callback.h
services/audiohdiproxy/src/: daudio_hdf_operate.cpp  daudio_hdi_handler.cpp  daudio_manager_callback.cpp
services/audiohdiproxy/test/unittest/: BUILD.gn
services/audiohdiproxy/test/unittest/daudio_hdi_handler/: BUILD.gn
services/audiohdiproxy/test/unittest/daudio_manager_callback/: BUILD.gn
services/audiomanager/managersink/: BUILD.gn
services/audiomanager/managersink/include/: daudio_sink_dev.h  daudio_sink_manager.h
services/audiomanager/managersink/src/: daudio_sink_dev.cpp  daudio_sink_manager.cpp
services/audiomanager/managersource/: BUILD.gn
services/audiomanager/managersource/include/: daudio_source_dev.h  daudio_source_manager.h  daudio_source_mgr_callback.h  dmic_dev.h  dspeaker_dev.h
services/audiomanager/managersource/src/: daudio_source_dev.cpp  daudio_source_manager.cpp  daudio_source_mgr_callback.cpp  dmic_dev.cpp  dspeaker_dev.cpp
services/audiomanager/servicesink/: BUILD.gn
services/audiomanager/servicesink/include/: daudio_sink_service.h  daudio_sink_stub.h
services/audiomanager/servicesink/src/: daudio_sink_service.cpp  daudio_sink_stub.cpp
services/audiomanager/servicesource/: BUILD.gn
services/audiomanager/servicesource/include/: daudio_ipc_callback_proxy.h  daudio_source_service.h  daudio_source_stub.h
services/audiomanager/servicesource/src/: daudio_ipc_callback_proxy.cpp  daudio_source_service.cpp  daudio_source_stub.cpp
services/audiotransport/audioctrltransport/: BUILD.gn
services/audiotransport/audioctrltransport/include/: audio_ctrl_transport.h
services/audiotransport/audioctrltransport/interface/: iaudio_ctrl_trans_callback.h  iaudio_ctrl_transport.h
services/audiotransport/audioctrltransport/src/: audio_ctrl_transport.cpp
services/audiotransport/encodetransport/: BUILD.gn
services/audiotransport/encodetransport/include/: audio_encode_transport.h
services/audiotransport/encodetransport/src/: audio_encode_transport.cpp
services/audiotransport/test/unittest/audioctrlchannel/: BUILD.gn
services/hdfaudioclient/: BUILD.gn
services/hdfaudioclient/include/: daudio_adapter_internal.h  daudio_attribute_internal.h  daudio_volume_internal.h
services/hdfaudioclient/src/: daudio_adapter_internal.cpp  daudio_capture_internal.cpp  daudio_param_callback_internal.cpp  daudio_render_callback_internal.cpp  daudio_render_internal.cpp  distributed_audio_client.cpp
services/hdfaudioclient/test/unittest/: BUILD.gn  audio_manager_test.cpp
services/hdfaudioclient/test/unittest/audio_adapter_internal/: audio_adapter_internal_test.cpp  audio_adapter_internal_test.h
services/hdfaudioclient/test/unittest/audio_capture_internal/: audio_capture_internal_test.cpp
(+439 files in other folders)
