# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

distributedaudio_path = "//foundation/distributedhardware/distributed_audio"
distributedhardwarefwk_path = "//foundation/distributedhardware/distributed_hardware_fwk"
mediastandard_path = "//foundation/multimedia/media_standard"

common_path = "${distributedaudio_path}/common"
services_path = "${distributedaudio_path}/services"
audio_processor_path = "${services_path}/audioprocessor"
softbusadapter_path = "${distributedaudio_path}/services/softbusadapter"
interfaces_path = "${distributedaudio_path}/interfaces"

fwk_utils_path = "${distributedhardwarefwk_path}/utils"
fwk_common_path = "${distributedhardwarefwk_path}/common"
fwk_services_path = "${distributedhardwarefwk_path}/services"

build_flags = ["-Werror"]
