# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_handler") {
    include_dirs = [
        "//utils/native/base/include",
        "include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
        "${fwk_common_path}/utils/include",
        "${common_path}/include",
        "//third_party/json/include",
        "//foundation/multimedia/player_framework/interfaces/inner_api/native",
        "//foundation/multimedia/player_framework/services/utils/include",
        "//foundation/multimedia/image_standard/interfaces/innerkits/include",
        "${services_path}/common/audioparam",
    ]

    sources = [
        "src/daudio_handler.cpp",
    ]

    deps = [
        "//utils/native/base:utils",
        "${common_path}:distributed_audio_utils",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager:audio_client",
        "//foundation/multimedia/player_framework/interfaces/inner_api/native:media_client",
        "//foundation/multimedia/player_framework/services/utils:media_service_utils",
        "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer:audio_capturer",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
    ]

    defines = [
        "HI_LOG_ENABLE",
        "DH_LOG_TAG=\"daudioHandler\"",
        "LOG_DOMAIN=0xD004100",
    ]

    cflags = ["-Wno-shadow"]
    cflags_cc = cflags

    subsystem_name = "distributedhardware"

    part_name = "distributed_audio"
}