if (defined(ohos_lite)) {
  group("distributed_audio_entry") {
    deps = []
  }
} else {
  group("distributed_audio_entry") {
    deps = [
      "./hdi_service/audio/v1_0:hdf_daudio_primary_service",
      "./hdi_service/audio_ext/v1_0:hdf_daudio_ext_service",
      "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audio/v1_0:daudio_idl_target",
      "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audioext/v1_0:daudioext_idl_target",
    ]
  }
}
