# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("dmic_client") {
    include_dirs = [
        "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
        "//foundation/multimedia/audio_framework/frameworks/native/common/include",
        "//foundation/multinedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
    ]

    include_dirs += [
        "${services_path}audiotransport/encodetransport/include",
        "${services_path}/audioclient/micclient/include",
        "${services_path}/audiotransport/encodetransport/includ",
        "${services_path}/common/audioeventcallback",
        "${common_path}/dfx_utils/include",
        "${common_path}/include",
        "${services_path}/common/audioparam",
        "${services_path}/common/audiodata/include",
        "${services_path}/audiotransport/audio_channel/include",
        "${services_path}/audiotransport/audiodatachannel/include",
        "${services_path}/audiotransport/encodetransport/include",
        "${services_path}/audiotransport/interface",
        "${services_path}/audioprocessor/encodeprocessor/include",
        "${services_path}/audioprocessor/interface",
        "${softbusadapter_path}/include",
        "${fwk_common_path}/utils/include",
    ]

    sources = [
        "${services_path}/audioclient/micclient/src/dmic_client.cpp",
    ]

    deps = [
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer:audio_capturer",
        "${services_path}/audiotransport/encodetransport:distributed_audio_encode_transport",
        "${distributedaudio_path}/common:distributed_audio_utils",
        "${services_path}/common:distributed_audio_service_common",
    ]

    defines = [
        "HI_LOG_ENABLE",
        "DH_LOG_TAG=\"daudio_mic_client\"",
        "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"

    part_name = "distributed_audio"
}
