# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("dmic_client") {
  include_dirs = [
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//foundation/multimedia/audio_framework/frameworks/native/common/include",
    "//foundation/multinedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
    "${mediastandardfwk_path}/audiocommon/include",
  ]

  include_dirs += [
    "${audio_client_path}/micclient/include",
    "${audio_processor_path}/encodeprocessor/include",
    "${audio_processor_path}/interface",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audiochannel/audiodatachannel/include",
    "${audio_transport_path}/encodetransport/include",
    "${audio_transport_path}/interface",
    "${common_path}/dfx_utils/include",
    "${common_path}/include",
    "${fwk_common_path}/utils/include",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioeventcallback",
    "${services_path}/common/audioparam",
    "${softbusadapter_path}/include",
  ]

  sources = [ "${audio_client_path}/micclient/src/dmic_client.cpp" ]

  deps = [
    "${audio_transport_path}/encodetransport:distributed_audio_encode_transport",
    "${common_path}:distributed_audio_utils",
    "${services_path}/common:distributed_audio_service_common",
  ]

  external_deps = [ "multimedia_audio_framework:audio_capturer" ]

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]

  subsystem_name = "distributedhardware"

  part_name = "distributed_audio"
}
