import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

ohos_shared_library("distributed_audio_manager_sink") {
    include_dirs = [
        "include",
        "//utils/native/base/include",
        "//third_party/json/include",
        "${distributedaudio_path}/interfaces/inner_kits/native_cpp/audio_source/include",
        "${common_path}/include",
        "${fwk_common_path}/utils/include",
        "${services_path}/audiocontrol/controlsink/include",
        "${services_path}/audioclient/micclient/include",
        "${services_path}/audioclient/spkclient/include",
        "${services_path}/common/taskProcessor/include",
        "${services_path}/common/audioparam",
        "${services_path}/common/audiodata/include",
        "${services_path}/common/audioeventcallback",

        "${services_path}/audiotransport/audio_channel/include",
        "${services_path}/audiotransport/audiodatachannel/include",
        "${services_path}/audiotransport/encodetransport/include",
        "${services_path}/audioprocessor/encodeprocessor/include",
        "${services_path}/audiotransport/audioctrltransport/include",
        "${services_path}/audiotransport/audioctrltransport/interface",
        "${services_path}/audiotransport/interface",
        "${services_path}/audioclient/transport/include",
        "${services_path}/audiotransport/decodetransport/include",
        "${services_path}/audioprocessor/decodeprocessor/include",
        "${services_path}/audioprocessor/interface",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager/include",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/encodetransport/include",
        "//foundation/distributedhardware/distributed_audio/common/include",
        "//foundation/distributedhardware/distributed_audio/services/common/audiodata/include",
        "//foundation/distributedhardware/distributed_audio/services/common/audioparam",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/encodetransport/includ",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/interface",
        "//foundation/distributedhardware/distributed_audio/services/common/audioeventcallback",
        "//foundation/distributedhardware/distributed_audio/services/audiotransport/audio_channel/include",
        "//foundation/communication/dsoftbus/interfaces/kits/transport",
    ]

    sources = [
        "src/daudio_sink_dev.cpp",
        "src/daudio_sink_manager.cpp",
    ]

    deps = [
        "//utils/native/base:utils",
        "${common_path}:distributed_audio_utils",
        "//foundation/distributedhardware/distributed_audio/hdf_interfaces/distributed_audio/audioext/v1_0:libdaudioext_proxy_1.0",
        "//foundation/distributedhardware/distributed_audio/services/common:distributed_audio_service_common",
        "//foundation/distributedhardware/distributed_audio/services/audiocontrol/controlsink:distributed_audio_sink_ctrl",

        "//foundation/distributedhardware/distributed_audio/services/audiotransport/decodetransport:distributed_audio_decode_transport",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager:audio_client",
        "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer:audio_renderer",
        "//foundation/distributedhardware/distributed_audio/common:distributed_audio_utils",
        "//foundation/distributedhardware/distributed_audio/services/audioclient/micclient:dmic_client",
        "//foundation/distributedhardware/distributed_audio/services/audioclient/spkclient:dspeaker_client",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
        "safwk:system_ability_fwk",
        "samgr_standard:samgr_proxy",
    ]

    defines = [
        "HI_LOG_ENABLE",
        "DH_LOG_TAG=\"daudioSinkManager\"",
        "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"

    part_name = "distributed_audio"
}